grammar.js
    source_file: $ => repeat(choice($.diagram, $._newline)),

    diagram: $ => seq(
      '@startuml',
      optional(field('name', alias($._to_eol, $.diagram_name))),
      $._newline,
      repeat(choice($._activity_statement, alias($._stray_closer, $.raw_line))),
      '@enduml',
    ),

    // Block closers with no opener — the legacy activity syntax
    // (`if "x" then` … `else` … `endif`, raw by SREQ-00009-1) and
    // malformed files — are raw, but only at diagram level, where no
    // block is open. Inside a block the same tokens keep their exact
    // closing semantics: this alternative is not part of any body.
    _stray_closer: $ => seq(
      choice(
        seq('else', optional($.label)),
        seq('elseif', optional($.label)),
        'endif',
        seq('endwhile', optional($.label)),
        'endswitch',
        seq('case', optional($.label)),
        seq('fork', 'again'),
        seq('split', 'again'),
        seq('end', choice('fork', 'merge', 'split')),
        seq('repeat', 'while', optional($.label)),
      ),
      $._newline,
    ),

    // `end` ends the flow and bare `break` leaves a loop; both are frame
    // tokens too, so they live outside _statement: inside a sequence
    // frame they keep closing (or opening) frames, everywhere else they
    // are terminals. Bare `break` still forks against an unlabeled
    // break frame; dynamic precedence keeps the activity reading.
    _activity_statement: $ => choice(
      $._statement,
      alias($._activity_terminal, $.activity_control),
    ),

    _statement: $ => choice(
      $.class_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.entity_declaration,
      $.relation,
      alias($.boundary_message, $.relation),
      $.colon_member,
      $.activity_action,
      $.activity_control,
      $.activity_arrow,
      $.connector,
      $.if_block,
      $.while_block,
      $.repeat_block,
      $.switch_block,
      $.fork_block,
      $.split_block,
      $.partition_block,
      $.swimlane,
      $.package_block,
      $.namespace_block,
      $.together_block,
      $.participant_declaration,
      $.frame_block,
      $.lifecycle_statement,
      $.return_statement,
      $.reference,
      $.box_block,
      $.delay,
      $.spacer,
      $.divider,
      $.note_statement,
      $.display_directive,
      $.comment,
      $.raw_line,
      $.raw_block,
      $._newline,
    ),

    // ── Notes ──────────────────────────────────────────────────────────

    note_statement: $ => choice(
      // note <position> of <entity> — attached to an entity or member
      seq(
        'note',
        field('position', $.note_position),
        'of',
        field('target', choice($._entity_name, $.member_ref)),
        optional(field('color', $.color)),
        $._note_body,
      ),
      // note over <entities> — the sequence-diagram attachment form
      seq(
        'note',
        field('position', alias('over', $.note_position)),
        field('target', $.entity_list),
        optional(field('color', $.color)),
        $._note_body,
      ),
      // note [<position>] on link — attached to the preceding relation
      seq('note', field('position', $.note_position), 'on', 'link', $._note_body),
      seq('note', 'on', 'link', $._note_body),
      // note <position> — attached to the preceding entity
      seq('note', field('position', $.note_position), $._note_body),
      // floating note: note "text" as N
      seq(
        'note',
        field('text', $.string),
        'as',
        field('alias', $.identifier),
        $._newline,
      ),
      // floating note with block body: note as N … end note
      seq('note', 'as', field('alias', $.identifier), $._note_body),
    ),

    _note_body: $ => choice(
      seq(':', field('text', $.label), $._newline),
      seq(
        $._newline,
        repeat(choice(alias($._raw_block_line, $.raw_line), $._newline)),
        alias(token(prec(3, /end[ \t]*note/)), 'end note'),
        $._newline,
      ),
    ),

    note_position: $ => choice('left', 'right', 'top', 'bottom', 'across'),

    // ── Display directives ─────────────────────────────────────────────

    class_declaration: $ => seq(
      choice(seq(field('abstract', $.abstract), optional('class')), 'class'),
      $._entity_head,
      choice(
        $._eos,
        seq(field('body', $.entity_body), $._eos),
        // Allman style: the opening brace on its own line. Without this
        // alternative the brace fell to a raw line and the closing one
        // was captured by the enclosing namespace_block, silently
        // corrupting every later entity's scope (issue #2).
        seq($._newline, field('body', $.entity_body), $._eos),
      ),
    ),

    interface_declaration: $ => seq(
      'interface',
      $._entity_head,
      choice(
        $._eos,
        seq(field('body', $.entity_body), $._eos),
        // Allman style: the opening brace on its own line. Without this
        // alternative the brace fell to a raw line and the closing one
        // was captured by the enclosing namespace_block, silently
        // corrupting every later entity's scope (issue #2).
        seq($._newline, field('body', $.entity_body), $._eos),
      ),
    ),

    entity_declaration: $ => seq(
      field('kind', alias(choice(
        'annotation', 'exception', 'metaclass', 'protocol',
        'struct', 'record', 'dataclass',
      ), $.entity_kind)),
      $._entity_head,
      choice(
        $._eos,
        seq(field('body', $.entity_body), $._eos),
        // Allman style: the opening brace on its own line. Without this
        // alternative the brace fell to a raw line and the closing one
        // was captured by the enclosing namespace_block, silently
        // corrupting every later entity's scope (issue #2).
        seq($._newline, field('body', $.entity_body), $._eos),
      ),
    ),

    // ── Activity diagrams (new syntax) ─────────────────────────────────

    // Actions and swimlanes are structural — the consumer is call-level
    // correlation (an action invokes a method; the lane names the
    // receiver) — and so is the control flow around them, which the
    // GDD's activity model folds into steps (DDEV-464). Single-line
    // actions only; multiline bodies keep falling to the raw frontier.
    // A #color prefix rides inside the text token: a color alone is no
    // statement, and a split token would leave `#blue:(B)` in ERROR.
    colon_member: $ => seq(
      field('entity', $._entity_name),
      ':',
      field('member', $.label),
      $._newline,
    ),

    _entity_head: $ => seq(
      field('name', $._entity_name),
      optional(field('generics', $.generics)),
      optional(field('stereotype', $.stereotype)),
      optional(seq('as', field('alias', $._entity_name))),
      optional(seq('extends', field('extends', $.entity_list))),
      optional(seq('implements', field('implements', $.entity_list))),
      optional(field('color', $.color)),
      repeat(field('tag', $.tag)),
      optional(field('link', $.hyperlink)),
    ),

    // A PlantUML hyperlink on an entity head: [[url]], [[url{tooltip}]],
    // [[url label]]. One token, decoded by the consumer; links inside
    // member and relation text ride in the text token (frontier).
    hyperlink: $ => token(prec(2, seq('[[', /[^\]\n]+/, ']]'))),

    tag: $ => token(/\$[\w-]+/),

    entity_list: $ => sep1($._entity_name, ','),

    color: $ => token(/#[\w;:.\/\\|-]+/),

    _entity_name: $ => choice($.identifier, $.string, $.qualified_name),

    // "namespace.path".Member — a quoted namespace qualifying a member.
    qualified_name: $ => seq($.string, token.immediate('.'), $.identifier),

    // Entity::member (or Entity::"member") — a member-qualified target.
    member_ref: $ => seq(
      $._entity_name,
      token.immediate('::'),
      choice($.identifier, $.string),
    ),

    stereotype: $ => token(seq('<<', /[^>\n]+/, '>>')),

    entity_body: $ => seq(
      '{',
      repeat(choice($.member, $.member_separator, $.comment, $._newline)),
      '}',
    ),

    // Group separators inside a body: --, .., ==, each with an optional
    // title; the underscore form requires a title (`__ text __`) so bare
    // dunder members (__init__) keep lexing as identifiers.
    member_separator: $ => seq(
      choice(
        token(prec(1, /--[^\n]*/)),
        token(prec(1, /\.\.[^\n]*/)),
        token(prec(1, /==[^\n]*/)),
        token(prec(1, /__[ \t][^\n]*/)),
      ),
      $._newline,
    ),

    // ── Members ────────────────────────────────────────────────────────

    member: $ => seq(
      optional(field('visibility', $.visibility)),
      repeat(field('modifier', $.modifier)),
      choice($.method, $.attribute, alias($.cpp_unclosed, $.raw_text)),
      $._eos,
    ),

    // Frontier inside class bodies, C++ edition: a scoped head whose
    // template bracket never closes on the line would otherwise commit
    // the lexer to a return type and die on the dangling `<`. This
    // token shares the return type's precedence, so the longest match
    // decides: any valid template out-lengths it, while on an unclosed
    // bracket it swallows the member whole as raw text, never an ERROR.
    visibility: $ => choice('+', '-', '#', '~'),

    modifier: $ => choice(
      '{static}', '{abstract}', '{field}', '{method}', '{classifier}',
    ),

    method: $ => seq(
      // C++-style signature: the return type sits left of the name.
      // A plain identifier (no C++ signal) may also stand there when
      // the parameter paren is pinned to the name — the scanner
      // confirms `T get<T>(` / `void execute(` before claiming the
      // type (issue #7), so prose members (`Callable Protocol —
      // called as …`) keep the attribute path.
      optional(field('type', choice(
        $.cpp_return_type,
        alias($._plain_return_type, $.identifier),
      ))),
      // `get<T>(` at member start is a name with template parameters,
      // not a templated return type: the scanner decides on the `(`
      // after the closing bracket, where the internal lexer would have
      // committed to cpp_return_type.
      field('name', choice(
        $.identifier,
        $.cpp_method_name,
        alias($._template_method_name, $.identifier),
      )),
      // Method-level template parameters (issue #5): `name<T>(…)`,
      // captured like class-level generics.
      optional(field('template_parameters', $.generics)),
      '(',
      optional(field('parameters', $.parameter_list)),
      ')',
      // C++ trailing qualifiers; before the canonical colon so
      // `name() const : type` (the cv-qualifier between the parens and
      // the PlantUML type) parses as written.
      optional(field('suffix', $.method_suffix)),
      // PlantUML canonical: the type after the colon (to end of line,
      // so a trailing `const` there stays part of the type text).
      optional(seq(':', field('type', $.type))),
    ),

    // A C++ type expression strong enough to sit left of a method name,
    // as one token: every alternative carries a C++ signal (a scope
    // path, template arguments, pointer/reference markers, or a leading
    // const), so prose members never match. Template nesting is
    // unrolled to four angle-bracket levels — beyond that the token
    // simply does not match and the line keeps its legacy parse, never
    // an ERROR. Inner template structure stays opaque on purpose: no
    // consumer reads it today, and a composed rule here traded the
    // frontier guarantee for a prettier tree.
    parameter_list: $ => sep1($.parameter, ','),

    // One nesting level of parentheses stays inside the parameter, so
    // callable types (`std::function<void(int, bool)>`) survive whole;
    // commas inside those inner parens do not split the list.
    // A parameter runs to the next top-level comma. Parentheses nest one
    // level (callable types, `std::function<void(int, bool)>`), and angle
    // brackets nest four, like cpp_return_type (issue #6: `map<K, V>`,
    // `map<K, vector<int>>`, deeper):
    // a balanced span is one alternative of the token, so the longest
    // match swallows the commas inside it; a lone `<` still matches as a
    // plain character, so `a < b` keeps parsing as before.
    parameter: $ => /([^,()\n]|\([^()\n]*\)|<([^<>\n]|<([^<>\n]|<([^<>\n]|<[^<>\n]*>)*>)*>)*>)+/,

    attribute: $ => seq(
      field('name', $.identifier),
      optional(choice(
        seq(':', field('type', $.type)),
        // free-text member lines ("Callable Protocol — called as …"):
        // anything after the leading identifier that is not a typed
        // attribute or a method call stays as one opaque raw_text token.
        field('text', alias(token(prec(-1, /[^ \t\n:({][^\n]*/)), $.raw_text)),
      )),
    ),

    type: $ => $._to_eol,

    // ── Relations ──────────────────────────────────────────────────────

    relation: $ => seq(
      // A keyword written as an entity name is a name here: the scanner says
      // so by emitting `_keyword_name`, which it only does when a relation
      // operator follows the word (`state --> Sum`). Aliased to identifier,
      // so the tree says what it is and the vocabulary does not grow.
      field('left', choice($._entity_name, $.member_ref, $.pseudostate, alias($._keyword_name, $.identifier))),
      optional(field('qualifier', $.qualifier)),
      optional(seq(
        field('left_cardinality', alias($.string, $.cardinality)),
        optional(field('left_role', alias(token.immediate(/\/[\w.-]+/), $.role))),
      )),
      field('operator', $.relation_operator),
      optional(seq(
        field('right_cardinality', alias($.string, $.cardinality)),
        optional(field('right_role', alias(token.immediate(/\/[\w.-]+/), $.role))),
      )),
      field('right', choice($._entity_name, $.member_ref, $.pseudostate)),
      optional(field('activation', $.activation)),
      optional(field('color', $.color)),
      // `A --> B [[{why}]]`: a relation may carry a link, and a link may be
      // nothing but an explanation. With a label present the label token
      // takes the rest of the line, so a consumer reads it from there.
      optional(field('link', $.hyperlink)),
      optional(seq(':', field('label', $.label))),
      $._eos,
    ),

    /**
     * `[*]` and `[H]`: the ends of a state machine, not entities. They sit
     * where a name sits, so a relation takes one at either end; what they
     * mean is for the consumer to say. The qualifier `[k]` matches the same
     * shape, so this token outranks it.
     */
    pseudostate: $ => token(prec(2, /\[(\*|[Hh]\*?)\]/)),

    // Sequence activation shorthands after the target: A -> B ++ #gold
    activation: $ => token(choice('++', '--', '**', '!!')),

    // Boundary messages: one endpoint is the diagram edge, expressed in
    // the operator itself ([->, ?->, ->], ->?, o-]). Aliased to relation
    // so the node vocabulary stays closed.
    qualifier: $ => token(seq('[', /[^\]\n]+/, ']')),

    relation_operator: $ => token(choice(
      // dashed core:  --|> <|-- *-- --* o-- --o --> <-- -- () lollipops,
      // the + hierarchy head, [style,...] tags, embedded direction hints
      // (-left->, -l->), and the sequence decorations: >> thin, >x lost,
      // >o circle (x/o heads too), \ / half heads, (N) slant. The x/o
      // tails only lex when adjacent to the arrow (`->o Alice`), so a
      // spaced `-> owner` keeps its plain operator.
      /(<\||<|\*|[ox]|\(\)|\+)?-+(\[[^\]\n]+\]-*)?((left|right|up|down|l|r|u|d)-+)?(\|>|>>|>[xo]?|\*|o|x|\(\)|\+|\\\\|\\|\/\/|\/)?(\(\d+\))?/,
      // dotted core:  ..|> <|.. ..> <.. ..
      /(<\||<|\*|[ox]|\(\)|\+)?\.+(\[[^\]\n]+\]\.*)?((left|right|up|down|l|r|u|d)\.+)?(\|>|>>|>[xo]?|\*|o|x|\(\)|\+|\\\\|\\|\/\/|\/)?(\(\d+\))?/,
    )),

    identifier: $ => /\$?[A-Za-z_]\w*([.-]\w+)*/,
